--- a/views/create_subtask.ejs
+++ b/views/create_subtask.ejs
@@ -35,37 +35,33 @@
     </div>
     <div class="content">
         <div class="section">
-            <h2>タスク作成</h2>
-            <form method="post" action="/project/create-task">
-                <label for="task_name"><b>Task Name</b></label>
-                <input type="text" placeholder="Enter Task Name" name="task_name" required>
+            <h2>サブタスク作成</h2>
+            <form method="post" action="/task/create-subtask">
+                <label for="subtask_name"><b>Subtask Name</b></label>
+                <input type="text" placeholder="Enter Subtask Name" name="subtask_name" required>
                 <br>
-        
-                <label for="task_description"><b>Task Description</b></label>
-                <input type="text" placeholder="Enter Task Description" name="task_description" required>
+
+                <label for="subtask_description"><b>Subtask Description</b></label>
+                <input type="text" placeholder="Enter Subtask Description" name="subtask_description" required>
                 <br>
-        
+
                 <label for="start_date"><b>Start Date</b></label>
                 <input type="date" placeholder="Enter Start Date" name="start_date" required>
                 <br>
-        
+
                 <label for="due_date"><b>Due Date</b></label>
                 <input type="date" placeholder="Enter Due Date" name="due_date" required>
                 <br>
-        
+
                 <label for="priority"><b>Priority</b></label>
                 <input type="text" placeholder="Enter Priority" name="priority" required>
-                <br>
-        
-                <label for="risk"><b>Risk</b></label>
-                <input type="text" placeholder="Enter Risk" name="risk" required>
                 <br>
 
                 <div class="selector">
                     <label for="responsible"><b>Responsible</b></label>
-                    <% if(users) { %>
+                    <% if(users) {%>
                     <select name="responsible">
-                        <% users.forEach( row => { %>
+                        <% users.forEach( row => {%>
                         <option value="<%= row.userID%>"><%= row.name %></option>
                         <% }); %>
                     </select>
@@ -74,52 +70,9 @@
                     <% } %>
                 </div>
 
-                <div class="selector">
-                    <label for="accountable"><b>Accountable</b></label>
-                    <%if(users) { %>
-                    <select name="accountable">
-                        <% users.forEach( row => { %>
-                        <option value="<%= row.userID%>"><%= row.name %></option>
-                        <% }) %>
-                    </select>
-                    <% } else { %>
-                        <input type="text" placeholder="Enter Accountable" name="accountable" required>
-                    <% } %>
-                </div>
-
-                <div class="selector">
-                    <label for="consulted"><b>Consulted</b></label>
-                    <% if(users) { %>
-                    <select name="consulted">
-                        <% users.forEach( row => { %>
-                        <option value="<%= row.userID%>"><%= row.name %></option>
-                        <% }) %>
-                    </select>
-                    <% } else { %>
-                        <input type="text" placeholder="Enter Consulted" name="consulted" required>
-                    <% } %>
-                </div>
-
-                <div class="selector">
-                    <label for="informed"><b>Informed</b></label>
-                    <% if(users) { %>
-                    <select name="informed">
-                        <% users.forEach( row => { %>
-                        <option value="<%= row.userID%>"><%= row.name %></option>
-                        <% }) %>
-                    </select>
-                    <% } else { %>
-                        <input type="text" placeholder="Enter Informed" name="informed" required>
-                    <% } %>
-                </div>
-        
                 <button type="submit">作成</button>
             </form>
         </div>
     </div>
 </div>
 </body>
-<script>
-    console.log(users);
-</script>
-</html>
