--- a/views/task.ejs
+++ b/views/task.ejs
@@ -51,6 +51,7 @@
             <div class="section">
                 <h2><%= projectData[0].name %></h2>
                 <p><%= projectData[0].description %></p>
+                <form action="/task/create-subtask" method="get"><button type="submit">サブタスクを作成</button></form>
             </div>
 
             <div class="section">
