increased visibility by changing colors

--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -400,3 +400,11 @@ form button {
 .selector select::-ms-expand {
     display: none;
 }
+
+.section h2.project-heading {
+    background-color: #3498db; /* Color for project heading */
+}
+
+.section h2.task-heading {
+    background-color: #e74c3c; /* Color for task heading */
+}
