--- a/views/create_project.ejs
+++ b/views/create_project.ejs
@@ -35,7 +35,7 @@
     </div>
     <div class="content">
         <div class="section">
-            <h2>プロジェクト作成</h2>
+            <h2 class="project-heading">プロジェクト作成</h2>
             <form method="post" action="/dashboard/create-project">
                 <label for="project_name"><b>Project Name</b></label>
                 <input type="text" placeholder="Enter Project Name" name="project_name" required>
