--- a/views/create_task.ejs
+++ b/views/create_task.ejs
@@ -35,7 +35,7 @@
     </div>
     <div class="content">
         <div class="section">
-            <h2>タスク作成</h2>
+            <h2 class="task-heading">タスク作成</h2>
             <form method="post" action="/project/create-task">
                 <label for="task_name"><b>Task Name</b></label>
                 <input type="text" placeholder="Enter Task Name" name="task_name" required>
