--- a/views/edit_project.ejs
+++ b/views/edit_project.ejs
@@ -35,7 +35,7 @@
     </div>
     <div class="content">
         <div class="section">
-            <h2>プロジェクト編集</h2>
+            <h2 class="project-heading">プロジェクト編集</h2>
             <form method="post" action="/project/edit-project">
                 <label for="project_name"><b>Project Name</b></label>
                 <input type="text" value="<%= projectData[0].name%>" name="project_name" required>
