--- a/views/edit_task.ejs
+++ b/views/edit_task.ejs
@@ -35,7 +35,7 @@
     </div>
     <div class="content">
         <div class="section">
-            <h2>タスク編集</h2>
+            <h2 class="task-heading">タスク編集</h2>
             <form method="post" action="/task/edit-task">
                 <label for="task_name"><b>Task Name</b></label>
                 <input type="text" value="<%= taskData[0].name %>" name="task_name" required>
