--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -37,7 +37,7 @@
     
     <div class="content">
         <div class="section">
-            <h2>タスク一覧</h2>
+            <h2 class="task-heading">タスク一覧</h2>
             <% if(taskData && taskData.length > 0) { %>
             <table id="taskTable">
                 <thead>
