--- a/views/project.ejs
+++ b/views/project.ejs
@@ -36,8 +36,21 @@
         </div>
 
         <div class="content">
+            <div class="breadcrumb">
+                <a href="/">ホーム</a>
+                <span>></span>
+                <a href="/dashboard">ダッシュボード</a>
+                <span>></span>
+                <span><%= projectData[0].name %></span>
+            </div>
+
             <div class="section">
-                <h2>タスク一覧</h2>
+                <h2 class="project-heading"><%= projectData[0].name %></h2>
+                <p><%= projectData[0].description %></p>
+            </div>
+
+            <div class="section">
+                <h2 class="task-heading">タスク一覧</h2>
                 <% if(taskData && taskData.length > 0) { %>
                     <table id="taskTable">
                         <thead>
