--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -36,7 +36,7 @@
         </div>
         <div class="content">
             <div class="section">
-                <h2>プロジェクト一覧</h2>
+                <h2 class="project-heading">プロジェクト一覧</h2>
                 <% if(projects && projects.length > 0) { %>
                     <table>
                         <thead>
