--- a/views/task.ejs
+++ b/views/task.ejs
@@ -49,12 +49,7 @@
             </div>
 
             <div class="section">
-                <h2><%= projectData[0].name %></h2>
-                <p><%= projectData[0].description %></p>
-            </div>
-
-            <div class="section">
-                <h2><%= taskData[0].name %></h2>
+                <h2 class="task-heading"><%= taskData[0].name %></h2>
                 <p>
                     概要：<%= taskData[0].description %><br>
                     作成日：<%= taskData[0].created_at %><br>
