--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -94,7 +94,7 @@
             </table>
             <div id="chart_div"></div>
             <% } else { %>
-                <p>表示するプロジェクトがありません</p>
+                <p>表示するタスクがありません</p>
             <% } %>
         </div>
     </div>
