--- a/views/subtask.ejs
+++ b/views/subtask.ejs
@@ -45,68 +45,32 @@
             <span>></span>
             <a href="/project?pid=<%= projectData[0].projectID%>"><%= projectData[0].name %></a>
             <span>></span>
-            <span><%= taskData[0].name %></span>
+            <a href="/task?tid=<%= taskData[0].taskID%>"><%= taskData[0].name %></a>
+            <span>></span>
+            <span><%= subtaskData[0].name %></span>
         </div>
 
         <div class="section">
             <h2><%= projectData[0].name %></h2>
             <p><%= projectData[0].description %></p>
-            <form action="/task/create-subtask" method="get"><button type="submit">サブタスクを作成</button></form>
         </div>
 
         <div class="section">
             <h2><%= taskData[0].name %></h2>
             <p>
                 概要：<%= taskData[0].description %><br>
-                作成日：<%= taskData[0].created_at %><br>
                 期限：<%= taskData[0].due %><br>
-                優先度：<%= taskData[0].priority %><br>
-                リスク：<%= taskData[0].risk %><br>
                 Responsible：<% users.forEach(row => { %><%= row.userID === taskData[0].responsible? row.name : ''%><% }) %><br>
-                Accountable：<% users.forEach(row => { %><%= row.userID === taskData[0].accountable? row.name : ''%><% }) %><br>
-                Consulted：<% users.forEach(row => { %><%= row.userID === taskData[0].consulted? row.name : ''%><% }) %><br>
-                Informed：<% users.forEach(row => { %><%= row.userID === taskData[0].informed? row.name : ''%><% }) %><br>
             </p>
-            <div class="selector">
-                <select name="progress" id="selectProgress">
-                    <option value="-1" <%= taskData[0].completion === -1 ? 'selected' : ''%>>開始前</option>
-                    <option value="0" <%= taskData[0].completion === 0 ? 'selected' : ''%>>進行中</option>
-                    <option value="1" <%= taskData[0].completion === 1 ? 'selected' : ''%>>完了</option>
-                </select>
-            </div>
-            <div><a href="/task/edit-task?tid=<%= taskData[0].taskID %>"><button>タスクを編集</button></a></div>
         </div>
 
         <div class="section">
-            <h2>添付ファイル</h2>
-            <% if(files && files.length > 0) { %>
-                <% files.forEach(file => { %>
-                    <li>
-                        <span style="display: inline;">
-                            <a href="<%= file.fileUrl %>" target="_blank"><%= file.fileName.replace(/^[^_]+_/, '') %></a>
-                        </span>
-                        <form action="/task/delete-file" method="post" style="display: inline;">
-                            <input type="hidden" value="<%= file.id %>" name="fileID">
-                            <input type="hidden" value="<%= taskData[0].taskID %>" name="taskID">
-                            <button type="submit">削除</button>
-                        </form>
-                    </li>
-                <% }) %>
-            <% }else { %>
-                <p>まだ添付ファイルはありません</p>
-            <% } %>
-        </div>
-
-        <div class="section">
-            <h2>ファイルアップロード</h2>
-            <form method="post" enctype="multipart/form-data" action="/task/upload-file">
-                <div class="file-upload">
-                    <input type="hidden" name="taskID" value="<%= taskData[0].taskID%>">
-                    <input type="file" name="taskFile" id="taskFile" accept=".docx,.xlsx,.pdf" required>
-                    <label for="taskFile">ファイルを選択</label>
-                    <button type="submit">Upload File</button>
-                </div>
-            </form>
+            <h2><%= subtaskData[0].name %></h2>
+            <p>
+                概要：<%= subtaskData[0].description %><br>
+                期限：<%= subtaskData[0].due %><br>
+                Responsible：<% users.forEach(row => { %><%= row.userID === subtaskData[0].responsible? row.name : ''%><% }) %><br>
+            </p>
         </div>
 
         <div class="section">
@@ -137,31 +101,4 @@
 </body>
 
 <script>
-    const taskID = "<%= taskData[0].taskID %>";
-    document.getElementById('selectProgress').addEventListener('change', function() {
-        // Get the selected value
-        const selectedValue = this.value;
-
-        // Create the data object to send
-        const data = { taskID: taskID, progress: selectedValue };
-
-        // Send the POST request to the server
-        fetch('/task/update-progress', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(data) // Send the selected value as JSON
-        })
-            .then(response => response.json())
-            .then(result => {
-                console.log('Success:', result);
-                // Reload the page after the server has processed the request
-                location.reload();
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-    });
-
 </script>
