can edit subtask

--- a/views/edit_subtask.ejs
+++ b/views/edit_subtask.ejs
@@ -37,12 +37,12 @@
         <div class="section">
             <h2 class="task-heading">サブタスク編集</h2>
             <form method="post" action="/subtask/edit-subtask">
-                <label for="task_name"><b>Task Name</b></label>
-                <input type="text" value="<%= subtaskData[0].name %>" name="task_name" required>
+                <label for="subtask_name"><b>Task Name</b></label>
+                <input type="text" value="<%= subtaskData[0].name %>" name="subtask_name" required>
                 <br>
 
                 <label for="task_description"><b>Task Description</b></label>
-                <input type="text" value="<%= subtaskData[0].description %>" name="task_description" required>
+                <input type="text" value="<%= subtaskData[0].description %>" name="subtask_description" required>
                 <br>
 
                 <label for="start_date"><b>Start Date</b></label>
