can comment on subtask

--- a/views/subtask.ejs
+++ b/views/subtask.ejs
@@ -88,7 +88,7 @@
                 <p>コメントはまだありません</p>
             <% } %>
 
-            <form method="post" action="/task/">
+            <form method="post" action="/subtask/">
                 <label for="comment"><b>コメントを送信</b></label>
                 <input type="text" placeholder="コメントを入力" name="comment" required>
                 <br>
