--- a/views/create_subtask.ejs
+++ b/views/create_subtask.ejs
@@ -35,7 +35,7 @@
     </div>
     <div class="content">
         <div class="section">
-            <h2>サブタスク作成</h2>
+            <h2 class="subtask-heading">サブタスク作成</h2>
             <form method="post" action="/task/create-subtask">
                 <label for="subtask_name"><b>Subtask Name</b></label>
                 <input type="text" placeholder="Enter Subtask Name" name="subtask_name" required>
