--- a/views/edit_subtask.ejs
+++ b/views/edit_subtask.ejs
@@ -35,7 +35,7 @@
     </div>
     <div class="content">
         <div class="section">
-            <h2 class="task-heading">サブタスク編集</h2>
+            <h2 class="subtask-heading">サブタスク編集</h2>
             <form method="post" action="/subtask/edit-subtask">
                 <label for="subtask_name"><b>Task Name</b></label>
                 <input type="text" value="<%= subtaskData[0].name %>" name="subtask_name" required>
