--- a/views/task.ejs
+++ b/views/task.ejs
@@ -107,7 +107,7 @@
             </div>
 
             <div class="section">
-                <h2>サブタスク一覧</h2>
+                <h2 class="subtask-heading">サブタスク一覧</h2>
                 <% if(subtaskData && subtaskData.length > 0) { %>
                     <table>
                         <thead>
