--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -313,3 +313,7 @@ a:hover {
 .section h2.task-heading {
     background-color: #e74c3c; /* Color for task heading */
 }
+
+.section h2.subtask-heading {
+    background-color: #e7007c; /* Color for task heading */
+}
