--- a/views/subtask.ejs
+++ b/views/subtask.ejs
@@ -49,12 +49,12 @@
         </div>
 
         <div class="section">
-            <h2><%= projectData[0].name %></h2>
+            <h2 class="project-heading"><%= projectData[0].name %></h2>
             <p><%= projectData[0].description %></p>
         </div>
 
         <div class="section">
-            <h2><%= taskData[0].name %></h2>
+            <h2 class="task-heading"><%= taskData[0].name %></h2>
             <p>
                 概要：<%= taskData[0].description %><br>
                 期限：<%= taskData[0].due %><br>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="section">
-            <h2><%= subtaskData[0].name %></h2>
+            <h2 class="subtask-heading"><%= subtaskData[0].name %></h2>
             <p>
                 概要：<%= subtaskData[0].description %><br>
                 期限：<%= subtaskData[0].due %><br>
