--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #f8f9fa;
+    background-color: #e3f2fd;
     font-family: 'Roboto', sans-serif;
     color: #333;
     line-height: 1.8;
@@ -25,7 +25,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #2c3e50;
+    background-color: #0d47a1;
     color: #ecf0f1;
     overflow-y: auto;
     transition: all 0.3s ease;
@@ -59,7 +59,8 @@ body {
 }
 
 .sidebar ul a li:hover {
-    background-color: #34495e;
+    background-color: #90caf9;
+    color: black;
     cursor: pointer;
 }
 
@@ -72,7 +73,7 @@ body {
 .header {
     background-color: #3498db;
     padding: 2em;
-    color: white;
+    color: black;
     text-align: center;
     margin-bottom: 3em;
     border-radius: 12px;
@@ -93,7 +94,7 @@ body {
 }
 
 .section h2 {
-    background-color: #2980b9;
+    background-color: #42a5f5;
     color: white;
     padding: 1.5em;
     font-size: 1.8em;
@@ -134,7 +135,7 @@ a {
 }
 
 a:hover {
-    color: #2980b9;
+    color: #3c096c;
 }
 
 #chart_div {
@@ -251,7 +252,7 @@ button {
 }
 
 button:hover {
-    background-color: #2980b9;
+    background-color: #0d47a1;
 }
 
 form button {
@@ -286,7 +287,7 @@ form button {
 }
 
 .file-upload label:hover {
-    background-color: #2980b9;
+    background-color: #0d47a1;
 }
 
 .file-upload label:focus {
@@ -307,24 +308,24 @@ form button {
 }
 
 .file-upload button:hover {
-    background-color: #2980b9;
+    background-color: #0d47a1;
 }
 
 .breadcrumb {
-    background-color: #f8f9fa;
+    background-color: #e3f2fd;
     padding: 0.8em 1.5em;
     font-size: 0.9em;
     border-bottom: 1px solid #dee2e6;
 }
 
 .breadcrumb a {
-    color: #3498db;
+    color: #1e88e5;
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 .breadcrumb a:hover {
-    color: #2980b9;
+    color: #0d47a1;
 }
 
 .breadcrumb span {
@@ -402,13 +403,16 @@ form button {
 }
 
 .section h2.project-heading {
-    background-color: #3498db; /* Color for project heading */
+    background-color: #1565c0; /* Color for project heading */
+    color: white;
 }
 
 .section h2.task-heading {
-    background-color: #e74c3c; /* Color for task heading */
+    background-color: #1e88e5; /* Color for task heading */
+    color: white;
 }
 
 .section h2.subtask-heading {
-    background-color: #e7007c; /* Color for task heading */
+    background-color: #90caf9; /* Color for task heading */
+    color: white;
 }
