--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -415,5 +415,5 @@ form button {
 
 .section h2.subtask-heading {
     background-color: #90caf9; /* Color for task heading */
-    color: white;
+    color: #333;
 }
