--- a/public/stylesheets/desktop.css
+++ b/public/stylesheets/desktop.css
@@ -43,7 +43,7 @@ body {
     margin: 2em 0 3em;
     border-radius: 50%;
     object-fit: cover;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    /*box-shadow: 0 4px 10px rgba(0,0,0,0.1);*/
 }
 
 .sidebar ul {
